deploy/base/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-basket-service-redis
  labels:
    app: ecommerce-basket-service-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-basket-service-redis
  template:
    metadata:
      labels:
        app: ecommerce-basket-service-redis
    spec:
      containers:
        - name: ecommerce-basket-service-redis
          image: redis
          ports:
            - name: http
              containerPort: 6379
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-basket-service-redis
spec:
  selector:
    app: ecommerce-basket-service-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
