deploy/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-basket-service
spec:
  selector:
    app: ecommerce-basket-service
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
